tests/toylang/neg/001025_mutation.toylang
program a = { if a then sleep else program a = { } .; } .
